--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/messaging": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "react": "18.1.0",
     "react-hook-form": "^7.36.1",
-    "react-native": "0.70.0",
+    "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-image-picker": "^4.10.0",
